--- a/pages/addcar/addcar.wxml
+++ b/pages/addcar/addcar.wxml
@@ -2,7 +2,7 @@
 <import src="../../components/blackTip/blackTip.wxml" />
 <template is="blackTip" data="{{...blackTip}}"/>
 <view class="container">
-    <view class="title">输入您的车辆信息</view>
+    <!--<view class="title">输入您的车辆信息</view>-->
     <view class="addcar-wrap">
         
         <view class="left">
@@ -12,8 +12,8 @@
         </view>
         <view class="right">
             <input placeholder="请输入车牌号码" maxlength="7" bindinput="setCarnumber" bindblur="testcarnumber" />
-            <input placeholder="车架号(车辆识别代号)后6位" maxlength="6" bindinput="setCarcode" bindblur="testcarcode" />
-            <input placeholder="请输入发动机号后6位" maxlength="6" bindinput="setCardrivenumber" bindblur="testcardrivenumber"/>
+            <input placeholder="车辆识别代号后6位" maxlength="6" bindinput="setCarcode" bindblur="testcarcode" />
+            <input placeholder="发动机号后6位" maxlength="6" bindinput="setCardrivenumber" bindblur="testcardrivenumber"/>
         </view>
     </view>
 
