--- a/pages/cardetail/cardetail.wxss
+++ b/pages/cardetail/cardetail.wxss
@@ -4,28 +4,24 @@
 }
 
 .car-wrap{
-    display: flex;
-    display: -webkit-flex;
 }
-.left{
-    flex: 2;
-    -webkit-flex: 2;
-    -webkit-box-flex: 2;
-}
+/*.left{
+    flex: 1;
+    -webkit-flex: 1;
+    -webkit-box-flex: 1;
+}*/
 .left text{
     display: block;
     line-height: 70rpx;
     text-align: right;
 }
 .right{
-    flex: 5;
-    -webkit-flex: 5;
-    -webkit-box-flex: 5;
+    text-align: center;
+    font-size: 38rpx;
 }
 .right .common{
     display: block;
     line-height: 70rpx;
-    padding-left: 32rpx;
 }
 
 .car-record{
@@ -35,9 +31,14 @@
     text-align: center;
     font-weight: 700;
     line-height: 70rpx;
+    padding: 32rpx;
 }
 .list{
     margin-top: 32rpx;
+}
+.list view {
+    height: 40rpx;
+    line-height: 40rpx;
 }
 button{
     margin-top: 32rpx;
