--- a/pages/cardetail/cardetail.wxml
+++ b/pages/cardetail/cardetail.wxml
@@ -8,18 +8,21 @@
             <text>发动机号：</text>
         </view>-->
         <view class="right">
-            <text class="common">{{carData.carnumber}}</text>
+            <view class="title">我们都是有故事的人</view>
+            <view wx:if="{{!carData.result.length}}" class="common">
+                <view>但是</view>
+                <view>{{carData.carnumber}}你木有！</view>
+            </view>
+            <view wx:else class="common">{{carData.carnumber}}: 你有 {{carData.result.length ? carData.result.length : "0"}} 段小历史 </view>
             <!--<text class="common">{{carData.carcode}}</text>
             <text class="common">{{carData.cardrivenumber}}</text>-->
         </view>
     </view>
     <view class="car-record">
-        <view class="title">我们都是有故事的人</view>
-        <view>违章：{{carData.result.length ? carData.result.length : "0"}} 次</view>
-
+        <!--<view>违章：{{carData.result.length ? carData.result.length : "0"}} 次</view>-->
         <block wx:if="{{carData.result.length}}">
             <view class="list" wx:for="{{carData.result}}">
-                   
+                    <view wx:if="{{carData.result.length > 1}}">{{index + 1}}、</view>
                     <view>时间：{{item.Time}}</view>
                     <view>地点：{{item.Location}}</view>
                     <view>原因：{{item.Reason}}</view>
@@ -31,7 +34,7 @@
             </view>
         </block>
     </view>
-    <button type="warn" bindtap="makecall">电话处理</button>
+    <button wx:if="{{carData.result.length}}" type="warn" bindtap="makecall">电话处理</button>
 
     <button wx:if="{{carData}}" bindtap="changeCar">更换车辆</button>
 </view> 
