--- a/pages/addcar/addcar.wxss
+++ b/pages/addcar/addcar.wxss
@@ -9,24 +9,26 @@
     margin-top: 50rpx;
 }
 .left{
-    flex: 2;
-    -webkit-flex: 2;
-    -webkit-box-flex: 2;
+    flex: 1;
+    -webkit-flex: 1;
+    -webkit-box-flex: 1;
 }
 .left text{
     display: block;
-    line-height: 72rpx;
+    height: 80rpx;
+    line-height: 80rpx;
     text-align: right;
 }
 .right{
-    flex: 4;
-    -webkit-flex: 4;
-    -webkit-box-flex: 4;
+    flex: 2;
+    -webkit-flex: 2;
+    -webkit-box-flex: 2;
     margin-left: 30rpx;
 }
 .right input{
-    line-height: 70rpx;
-    padding: 10rpx;
+    display: block;
+    height: 80rpx;
+    line-height: 80rpx;
 }
 button{
     margin-top: 80rpx;
