--- a/pages/mapNav/mapNav.wxss
+++ b/pages/mapNav/mapNav.wxss
@@ -28,3 +28,34 @@
     font-size: 32rpx;
     padding-left: 16rpx;
 }
+.address-list-wrapper {
+    position: absolute;
+    top: 80rpx;
+    width: 100%;
+    height: 500rpx;
+    margin-left: -16rpx;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+.address-list {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    background: #fff;
+    padding: 12rpx;
+    border-bottom: 1rpx solid #f7f7f7;
+}
+.address-list .title {
+    height: 50rpx;
+    font-size: 32rpx;
+    line-height: 50rpx;
+    padding: 12rpx 0 0 12rpx;
+}
+.address-list .address {
+    height: 40rpx;
+    padding: 8rpx 0 0 12rpx;
+    line-height: 40rpx;
+    font-size: 28rpx;
+    color: #999;
+}
